# Activity_Management_System

./: CMakeLists.txt  README.md  a.out
src/: Activity Management System.cpp  mouse.hpp  public.h
src/dataFile/: data.json  participant.json
src/entity/: Activity.cpp  Activity.h  Management.cpp  Management.h  User.cpp  User.h
src/serialize/cereal/: cereal.hpp  macros.hpp  specialize.hpp
src/serialize/cereal/archives/: json.hpp
src/serialize/cereal/details/: static_object.hpp  traits.hpp
src/serialize/cereal/types/: common.hpp
src/window/: ActivityWin.cpp  ActivityWin.h  HomeWin.cpp  HomeWin.h  InitWin.cpp  InitWin.h  LoginWin.cpp  LoginWin.h  PersonalWin.cpp  PersonalWin.h  QuitWin.cpp  QuitWin.h  RegisterWin.cpp  RegisterWin.h
src/windowTool/: CButton.cpp  CButton.h  CEdit.cpp  CEdit.h  CLabel.cpp  CLabel.h  CMouse.cpp  CMouse.h  CTools.cpp  CTools.h  CtrBase.cpp  CtrBase.h
